// TypeScript interface for Sky130Decap parameter protobuf

export interface Sky130Decap {
  width_nm?: number;
  height_nm?: number;
  nfet_0_width_nm?: number;
  pfet_0_width_nm?: number;
  nfet_0_length_nm?: number;
  pfet_0_length_nm?: number;
  label_pins?: boolean;
  draw_overflowing_vias_and_pins?: boolean;
}
